kubernetes/networking/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contacts-ingress
  namespace: contacts-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: contacts-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: contacts-api-service
            port:
              name: http
      - path: /contacts
        pathType: Prefix
        backend:
          service:
            name: contacts-api-service
            port:
              name: http
  - host: monitoring.contacts-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              name: web
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              name: web
